2003-08-20  Akim Demaille  <akim@epita.fr>

	* bin/autoheader.in: Remove duplicate 'use Autom4te::FileUtils'.
	Reported by Alexandre Duret-Lutz.

2003-08-20  Akim Demaille  <akim@epita.fr>

	* bin/autoupdate.in, bin/auheader.in, bin/autoreconf.in,
	* bin/autom4te: Adjust.
	In particular, be Autoconf tools are really silent when properly
	working, bind the verbosity of the 'note' channel to $verbose.
	* lib/Autom4te/General.pm (&find_file, &mtime, &update_file)
	(&xsystem, &contents): Remove, since they are exported by...
	* lib/Autom4te/FileUtils.pm: this.
	More perldoc.
	* lib/Autom4te/General.pm (&up_to_date_p): Move to...
	* lib/Autom4te/FileUtils.pm: here.

2003-08-20  Akim Demaille  <akim@epita.fr>

	* lib/Autom4te/Channels.pm, lib/Autom4te/ChannelDefs.pm
	* lib/Autom4te/Configure_ac.pm, lib/Autom4te/FileUtils.pm: New,
	from CVS Automake.

2003-08-20  Akim Demaille  <akim@epita.fr>

	* Makefile.am (automake_cvsweb, automake_cvsargs, autom4te_files)
	(autom4te-update): New.
	* Makefile.cfg (update): Bind autom4te-update.

2003-08-19  Derek Price  <derek@ximbiot.com>

	* lib/autotest/general.m4: Comment various HELP_* diversions.
	(PARSE_ARGS_BEGIN): New section for option parsing related
	initialization.
	(AT_ARG_OPTION,AT_ARG_OPTION_ARG,_AT_ARG_OPTION): New macros to define
	package specific options and associated help.

2003-08-19  Akim Demaille  <akim@epita.fr>

	* config/announce-gen, Makefile.cfg: New.
	* Makefile.am: Adjust.
	* GNUmakefile, Makefile.maint: Update from CVS Coreutils.

2003-08-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/autom4te.in (Automake-preselections): Preselect
	AC_CONFIG_LIBOBJ_DIR, AC_CONFIG_LINKS, m4_include,
	and m4_sinclude.

2003-08-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/autom4te.in (Autoconf): Move all args except aclocal.m4? into ...
	(Autoconf-without-aclocal-m4): ... this new language.
	* doc/autoconf.texi (autom4te Invocation): Mention
	Autoconf-without-aclocal-m4.

2003-08-18  Derek Price <derek@ximbiot.com>
