@@ -41,6 +41,7 @@ BEGIN
 
 use Autom4te::ChannelDefs;
 use Autom4te::Channels;
+use Autom4te::Configure_ac;
 use Autom4te::FileUtils;
 use Autom4te::General;
 use Autom4te::XFile;
@@ -121,9 +122,7 @@ sub parse_args ()
 
   if (! @ARGV)
     {
-      my $configure_ac = find_configure_ac;
-      error "no input file"
-	unless $configure_ac;
+      my $configure_ac = require_configure_ac;
       push @ARGV, $configure_ac;
     }
 }
