@@ -39,6 +39,7 @@ BEGIN
   $ENV{'SHELL'} = '@SHELL@' if ($^O eq 'dos');
 }
 
+use Autom4te::Configure_ac;
 use Autom4te::FileUtils;
 use Autom4te::General;
 use Autom4te::XFile;
@@ -290,9 +291,7 @@ sub run_aclocal ($$)
 # -----------------------------
 sub autoreconf_current_directory ()
 {
-  my $configure_ac = find_configure_ac;
-  error "cannot find `configure.ac'"
-    unless $configure_ac;
+  my $configure_ac = require_configure_ac;
 
   # ---------------------- #
   # Is it using Autoconf?  #
